# aoc2023

./: .gitignore  Cargo.toml
aoc01_trebuchet/: Cargo.toml
aoc01_trebuchet/src/: main.rs
aoc02_cube_conundrum/: Cargo.toml
aoc02_cube_conundrum/src/: main.rs
aoc03_gear_ratios/: Cargo.toml
aoc03_gear_ratios/src/: main.rs
aoc04_scratchcards/: Cargo.toml
aoc04_scratchcards/src/: main.rs
aoc05_if_you_give/: Cargo.toml
aoc05_if_you_give/src/: main.rs
aoc06_wait_for_it/: Cargo.toml
aoc06_wait_for_it/src/: main.rs
aoc07_camel_cards/: Cargo.toml
aoc07_camel_cards/src/: main.rs
aoc08_haunted_wasteland/: Cargo.toml
aoc08_haunted_wasteland/src/: main.rs
day01_trebuchet/: Cargo.toml
day01_trebuchet/src/: main.rs
day02_cube_conundrum/: Cargo.toml
day02_cube_conundrum/src/: main.rs
day03_gear_ratios/: Cargo.toml  example.txt
day03_gear_ratios/src/: main.rs
day04_scratchcards/: Cargo.toml
day04_scratchcards/src/: main.rs
day05_if_you_give/: Cargo.toml
day05_if_you_give/src/: main.rs
day06_wait_for_it/: Cargo.toml
day06_wait_for_it/src/: main.rs
day07_camel_cards/: Cargo.toml
day08_haunted_wasteland/: Cargo.toml
day09_mirage_maintenance/: Cargo.toml
day10_pipe_maze/: Cargo.toml
day11_cosmic_expansion/: Cargo.toml
day12_hot_springs/: Cargo.toml
day13_point_of_incidence/: Cargo.toml
day14_parabolic_reflector/: Cargo.toml
day15_lens_library/: Cargo.toml
day16_floor_lava/: Cargo.toml
day17_clumsy_crucible/: Cargo.toml
day18_lavaduct_lagoon/: Cargo.toml  example.txt
day19_aplenty/: Cargo.toml
sdk/: Cargo.toml
(+14 files in other folders)
