[workspace]
resolver = "2"
members = [
    "day01_trebuchet",
    "day02_cube_conundrum",
    "day03_gear_ratios",
    "day04_scratchcards",
    "day05_if_you_give",
    "day06_wait_for_it",
    "day07_camel_cards",
    "day08_haunted_wasteland",
    "day09_mirage_maintenance",
    "day10_pipe_maze",
    "day11_cosmic_expansion",
    "day12_hot_springs",
    "day13_point_of_incidence",
    "day14_parabolic_reflector",
    "day15_lens_library",
    "day16_floor_lava",
    "sdk"
]